# beleggen-coach

./: -w  .env.example  .gitignore  FASE_15_DELIVERABLES.txt  FASE_15_DELIVERY_CHECKLIST.md  FASE_15_IMPLEMENTATION_SUMMARY.md  FASE_15_README.md  README.md  docker-compose.yml  package.json  setup.ps1  start-dev.ps1
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  behavior-coach.agent.md  code-reviewer.agent.md  compliance-check.agent.md  data-engineer.agent.md  ddd-modeler.agent.md  developer.agent.md  domain-validator.agent.md  etf-analyst.agent.md  frontend-mentor.agent.md  mcp-architect.agent.md  playwright.agent.md  product-strategist.agent.md  regression-selector.agent.md  security-check.agent.md  test-data-designer.agent.md  test-engineer.agent.md
.github/workflows/: ci.yml  docker-build.yml  security.yml
apps/api/: .env.example  Dockerfile  FASE_15_BEFORE_AFTER.md  FASE_15_QUICK_REFERENCE.md  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini
apps/web/: .env.example  (+6 more)
docs/: AI_FLEET_SHARED_KNOWLEDGE.md  PHASE_1_AI_SETUP_PLAN.md
documentatie/: ai-agents-setup-handleiding.txt  projectplan.txt  voor-sarah.md
mcp/behavior-coach-mcp/: pyproject.toml
mcp/behavior-coach-mcp/src/behavior_coach_mcp/: __init__.py  schemas.py  server.py
mcp/behavior-coach-mcp/src/behavior_coach_mcp/tools/: __init__.py  coach_tools.py
mcp/etf-data-mcp/: pyproject.toml
mcp/etf-data-mcp/src/etf_data_mcp/: schemas.py  scoring.py  server.py
mcp/etf-data-mcp/src/etf_data_mcp/data/: __init__.py  etf_catalog.py
mcp/etf-data-mcp/src/etf_data_mcp/tools/: __init__.py  etf_tools.py
mcp/investor-profile-mcp/: pyproject.toml
mcp/investor-profile-mcp/src/investor_profile_mcp/: __init__.py  schemas.py  server.py
mcp/investor-profile-mcp/src/investor_profile_mcp/db/: __init__.py  models.py  session.py
mcp/investor-profile-mcp/src/investor_profile_mcp/tools/: __init__.py  calculate_capacity.py  create_profile.py  risk_summary.py  update_goal.py
mcp/learning-content-mcp/: pyproject.toml
mcp/learning-content-mcp/src/learning_content_mcp/: server.py
mcp/learning-content-mcp/src/learning_content_mcp/data/: __init__.py  content.py
mcp/learning-content-mcp/src/learning_content_mcp/tools/: __init__.py  learning_tools.py
mcp/market-data-mcp/: pyproject.toml
mcp/market-data-mcp/src/market_data_mcp/: server.py
mcp/market-data-mcp/src/market_data_mcp/tools/: __init__.py  market_tools.py
mcp/portfolio-plan-mcp/: pyproject.toml
mcp/portfolio-plan-mcp/src/portfolio_plan_mcp/: schemas.py  server.py
mcp/portfolio-plan-mcp/src/portfolio_plan_mcp/tools/: __init__.py  plan_tools.py
(+179 files in other folders)
