[project]
name = "behavior-coach-mcp"
version = "0.1.0"
description = "MCP server voor gedragscoaching van beginnende beleggers"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6.0",
]

[project.scripts]
serve = "behavior_coach_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
