[project]
name = "investor-profile-mcp"
version = "0.1.0"
description = "MCP server voor investeerdersprofiel, doelen en risicobeoordeling"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
serve = "investor_profile_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
