[project]
name = "learning-content-mcp"
version = "0.1.0"
description = "MCP server voor educatieve beleggingsinhoud voor beginners"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6.0",
]

[project.scripts]
serve = "learning_content_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
