[project]
name = "market-data-mcp"
version = "0.1.0"
description = "MCP server voor synthetische marktdata, volatiliteit en drawdown"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6.0",
]

[project.scripts]
serve = "market_data_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
