[project]
name = "portfolio-plan-mcp"
version = "0.1.0"
description = "MCP server voor portefeuilleplannen en simulaties voor beginners"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6.0",
]

[project.scripts]
serve = "portfolio_plan_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
